--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "NFormer_ORIGINAL"]
+[submodule "NFormer/Original"]
 	path = NFormer/Original
 	url = https://github.com/haochenheheda/NFormer
