--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "NFormer/Original"]
-	path = NFormer/Original
+[submodule "Original"]
+	path = Original
 	url = https://github.com/haochenheheda/NFormer
