Update NFormer path

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Original"]
-	path = Original
+[submodule "NFormer/Original"]
+	path = NFormer/Original
 	url = https://github.com/haochenheheda/NFormer
